# stabletrace

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  start_dev.ps1
.github/workflows/: ci.yml
api/: db.py  main.py
api/models/: responses.py
api/routers/: risk.py
app/: package-lock.json  package.json
app/app/: layout.tsx  page.tsx
app/app/risk/: page.tsx
app/components/: Navbar.tsx  RiskExplorer.tsx  SanctionsTable.tsx  SupplyChart.tsx  TopAssetsTable.tsx
ingest/: debug_defillama_history.py  debug_defillama_history_2.py  debug_defillama_history_3.py  debug_inspect.py  debug_opensanctions.py  debug_opensanctions_relations.py  debug_supply.py  run_backfill.py  run_ingest.py
ingest/connectors/: coingecko.py  defillama.py  risk_cryptoscamdb.py  sanctions_ofac.py  sanctions_opensanctions.py
warehouse/: schema.sql
