[project]
name = "stabletrace"
version = "0.1.0"
description = "Stablecoin data observatory and risk dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "duckdb>=0.9.2",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "httpx>=0.26.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
